Fix align error

--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,7 @@ body {
 
 ul {
   display: flex;
+  align-items: center;
   margin: 0;
   padding-left: 0;
 }
@@ -83,6 +84,7 @@ li a.button {
 div {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  gap: 1rem;
 }
 
 span {
